--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <build_depend>nav_core</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>navfn</build_depend>
+  <build_depend>move_base_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
@@ -25,6 +26,7 @@
   <build_export_depend>nav_core</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>navfn</build_export_depend>
+  <build_export_depend>move_base_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>dynamic_reconfigure</build_export_depend>
@@ -36,6 +38,7 @@
   <exec_depend>nav_core</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>navfn</exec_depend>
+  <exec_depend>move_base_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
